--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
+    "react-hot-toast": "^2.4.1",
+    "sweetalert2": "^11.7.20",
     "tailwindcss": "3.3.3"
   }
 }
